Add more photos, add better switches for theme switches. Update navbar settings switch root render method.

--- a/src/locales/en/en.json
+++ b/src/locales/en/en.json
@@ -13,7 +13,9 @@
     "gothbrutality": "The plot contains the head of the owner made from wool. Inside of it you can find small room with unique items collected by the owner. ",
     "1mph": "The plot looks like beautiful garden with naturalistic look. In the center of the plot you can find the entrance - drop - to the underground room.",
     "hydroksyzine": "The plot contains banners related to the name of the owner. Plot is set to have a nether like look. With fireplace and netherack it looks like a small hell.",
-    "kvdzi": "Hellish looking place, with bone structure representing spine of some beast. The plot has an entrance to the basement, where you can find wall decorations and some structural elements."
+    "kvdzi": "Hellish looking place, with bone structure representing spine of some beast. The plot has an entrance to the basement, where you can find wall decorations and some structural elements.",
+    "przedawkowalam": "The plot contains ancient looking structure, the most important part are garden stages, that contain flowers. In the back you can find fountain structure.",
+    "lulu": "The plot contains Lulu character from League of Legends."
   },
   "About": {
     "Title": "About me",
