--- a/src/locales/pl/pl.json
+++ b/src/locales/pl/pl.json
@@ -13,7 +13,9 @@
     "gothbrutality": "Działka zawiera głowę właściciela wykonaną z wełny. Wewnątrz znajduje się mały pokój z unikalnymi przedmiotami zebranymi przez właściciela.",
     "1mph": "Działka wygląda jak piękny ogród o naturalistycznym wyglądzie. W centrum działki znajduje się wejście - spadek - do podziemnego pomieszczenia.",
     "hydroksyzine": "Działka zawiera banery związane z nazwą właściciela. Działka ma wygląd przypominający Nether. Z kominkiem i netherackiem wygląda jak małe piekło.",
-    "kvdzi": "Miejsce o piekielnym wyglądzie, z konstrukcją kostną, przedstawiającą kręgosłup jakiegoś stworzenia. Działka ma wejście do piwnicy, gdzie znajdują się dekoracje ścienne i pewne elementy konstrukcyjne."
+    "kvdzi": "Miejsce o piekielnym wyglądzie, z konstrukcją kostną, przedstawiającą kręgosłup jakiegoś stworzenia. Działka ma wejście do piwnicy, gdzie znajdują się dekoracje ścienne i pewne elementy konstrukcyjne.",
+    "przedawkowalam": "Działka wzorowana na wiszących ogrodach z elementami starożytnymi. Kolorowe kwiaty posadzone na różnych wysokościach przyciągają uwagę, natomiast z tyłu działki widzimy fontanne.",
+    "lulu": "Działka przedstawia postać z gry League of Legends - Lulu."
   },
   "About": {
     "Title": "O mnie",
